--- a/etiqafe/package.json
+++ b/etiqafe/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +27,7 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
