change db to azure

--- a/etiqaapi/etiqaAPI/appsettings.json
+++ b/etiqaapi/etiqaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Etiqa;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=tcp:nasihpersonal.database.windows.net,1433;Initial Catalog=nasih.etiqa;Persist Security Info=False;User ID=nasih94;Password=Aliah1994!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
